--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   
 
-    <title>website</title>
+    <title>Online Optimization, by Horiseon</title>
 
 </head>
 
