--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- changed div tag to header tag-->
+    <header>
 
         <h1>Hori<span class="seo">seo</span>n</h1>
 
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -30,14 +31,16 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+<!-- changed div tag to figure and removed class -->
+    <figure class="hero"></figure>
 
-    <div class="hero"></div>
+<!-- Changed div tag to article tag -->
+    <article class="content">
 
-    <div class="content">
-
-        <div class="search-engine-optimization">
+<!--Changed div tag to section tag -->
+        <section class="search-engine-optimization">
 
             <!--added alt text and fixed closing bracket -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="picture of notebook, laptop and coffee" class="float-left">
@@ -47,10 +50,10 @@
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-         </div>
+        </section>
 
-
-        <div id="online-reputation-management" class="online-reputation-management">
+        <!--removed id tag and div tag. Replaced div tag with section tag -->
+        <section class="online-reputation-management">
 
             <!--added alt text and fixed closing bracket -->
             <img src="./assets/images/online-reputation-management.jpg" alt="picture of laptop that reads Reputation" class="float-right">
@@ -60,10 +63,11 @@
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
+        <!--Changed div tag to section tag -->
+        </section>
 
-        </div>
-
-        <div id="social-media-marketing" class="social-media-marketing">
+        <!--removed id tag and div tag. Replaced div tag with section tag -->
+        <section class="social-media-marketing">
 
         <!--added alt text and fixed closing bracket -->
             <img src="./assets/images/social-media-marketing.jpg" alt="picture of table with group of people standing around" class="float-left">
@@ -73,12 +77,14 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
+        <!--Changed div tag to section tag -->
+        </section>
+    </article>
 
-        </div>
-    </div>
-
-    <div class="benefits">
-        <div class="benefit-lead">
+<!-- Changed div tag to article tag -->
+    <article class="benefits">
+        <!-- Changed div tag to aside -->
+        <aside class="benefit-lead">
 
             <h3>Lead Generation</h3>
 
@@ -88,9 +94,11 @@
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
+            <!-- Changed div tag to aside -->
+        </aside>
 
-        <div class="benefit-brand">
+    <!-- Changed div tag to aside -->
+        <aside class="benefit-brand">
 
             <h3>Brand Awareness</h3>
 
@@ -100,29 +108,37 @@
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
+            <!-- Changed div tag to aside -->
+        </aside>
 
-        <div class="benefit-cost">
+        <!-- Changed div tag to aside -->
+        <aside class="benefit-cost">
 
             <h3>Cost Management</h3>
 
             <!--added alt text and fixed closing bracket -->
+
             <img src="./assets/images/cost-management.png" alt="Cost Management">
 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
 
-    <div class="footer">
+        <!-- Changed div tag to aside -->
+        </aside>
+
+    <!-- Changed div tag to article tag -->
+    </article>
+
+    <!-- Changed div tag to footer tag and removed class -->
+    <footer>
 
         <h2>Made with ❤️️ by Horiseon</h2>
 
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 
 </body>
 
